--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 			<div class="row no-gutters slider-text justify-content-center align-items-center" style="height: 350px;">
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center">
-						<span class="subheading">Bonjour! Je suis</span>
+						<!-- <span class="subheading">Bonjour! Je suis</span> -->
 						<h1>Alper AKBULUT</h1>
 						<h2>Je suis un
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='[ "developpeur web junior", "coureur d&#39orientation", "challenger", "passionné du code" ]'></span>
+								data-rotate='[ "développeur web junior", "coureur d&#39orientation", "challenger", "passionné du code" ]'></span>
 							<!-- &#39 -->
 						</h2>
 					</div>
@@ -153,7 +153,7 @@
 	<section class="ftco-section ftco-no-pb goto-here" id="resume-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-md-2">
 					<nav id="navi">
 						<ul>
 							<li><a href="#page-1">Education</a></li>
@@ -163,7 +163,7 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-md-9">
+				<div class="col-md-10">
 					<div id="page-1" class="page one">
 						<h2 class="heading">FORMATION</h2>
 
