--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
 					<div id="page-3" class="page three">
 						<h2 class="heading">COMPÉTENCES</h2>
 						<div class="row progress-circle mb-5">
-							<div class="col-lg-3 mb-4">
-								<div class="bg-white rounded-lg shadow p-4">
+							<div class="col-lg-4 mb-4">
+								<div class="bg-white rounded-lg shadow p-4 h-100">
 									<h2 class="h5 font-weight-bold text-center mb-4">FRONT-END</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
@@ -333,23 +333,22 @@
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-bootstrap-plain colored"></i>Bootstrap</li>
 										<li class="list-group-item d-flex border-0">
-											<i class="devicon-wordpress-plain colored"></i>WordPress</li>
-										<li class="list-group-item d-flex border-0">
 											<i class="devicon-javascript-plain colored"></i>JavaScript</li>
+										<li class="list-group-item d-flex border-0">
+											<i class="devicon-typescript-plain colored"></i>TypeScript</li>
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-angularjs-plain colored"></i>Angular</li>
 									</ul>
 								</div>
 							</div>
 
-							<div class="col-lg-3 mb-4">
-								<div class="bg-white rounded-lg shadow p-4">
+							<div class="col-lg-4 mb-4">
+								<div class="bg-white rounded-lg shadow p-4 h-100">
 									<h2 class="h5 font-weight-bold text-center mb-4">BACK-END</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-php-plain colored"></i>PHP</li>
-										<li class="list-group-item d-flex border-0">
-											<i class="devicon-typescript-plain colored"></i>TypeScript</li>
+
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-mysql-plain colored"></i>MySQL</li>
 										<li class="list-group-item d-flex border-0">
@@ -362,8 +361,8 @@
 								</div>
 							</div>
 
-							<div class="col-lg-3 mb-4">
-								<div class="bg-white rounded-lg shadow p-4">
+							<div class="col-lg-4 mb-4">
+								<div class="bg-white rounded-lg shadow p-4 h-100">
 									<h2 class="h5 font-weight-bold text-center mb-4">GESTION DE PROJET</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
@@ -373,23 +372,31 @@
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-trello-plain colored"></i>Trello</li>
 										<li class="list-group-item d-flex border-0">
-											<i class="devicon-postman-plain colored"></i>Postman</li>
-										<li class="list-group-item d-flex border-0">
 											<i class="devicon-plain colored"></i>Scrum</li>
-										<li class="list-group-item d-flex border-0">
-											<i class="devicon-plain colored"></i>Modélisation de système
-											informatique</li>
 									</ul>
 								</div>
 							</div>
-							<div class="col-lg-3 mb-4">
-								<div class="bg-white rounded-lg shadow p-4">
+							<div class="col-lg-4 mb-4">
+								<div class="bg-white rounded-lg shadow p-4 h-100">
 									<h2 class="h5 font-weight-bold text-center mb-4">DESIGN & BUREAUTIQUE</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-figma-plain colored"></i>Figma (UI, UX, prototypage)</li>
 										<li class="list-group-item d-flex border-0">
-											<i class="devicon-google-plain colored"></i>Suite Office, Google Drive</li>
+											<i class="devicon-google-plain colored"></i>Suite Office</li>
+										<li class="list-group-item d-flex border-0">
+											<i class="devicon-google-plain colored"></i>Google Drive</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-lg-4 mb-4">
+								<div class="bg-white rounded-lg shadow p-4 h-100">
+									<h2 class="h5 font-weight-bold text-center mb-4">CMS</h2>
+									<ul class="list-group">
+										<li class="list-group-item d-flex border-0">
+											<i class="devicon-wordpress-plain colored"></i>WordPress</li>
+										<li class="list-group-item d-flex border-0">
+											<i class="devicon-wordpress-plain colored"></i>Elementor</li>
 									</ul>
 								</div>
 							</div>
