--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 				<div class="col-md-2">
 					<nav id="navi">
 						<ul>
-							<li><a href="#page-1">Education</a></li>
-							<li><a href="#page-2">Experience</a></li>
-							<li><a href="#page-3">Skills</a></li>
-							<li><a href="#page-4">Awards</a></li>
+							<li><a href="#page-1">Formation</a></li>
+							<li><a href="#page-2">Expérience</a></li>
+							<li><a href="#page-3">Compétences</a></li>
+							<li><a href="#page-4">Projects</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -623,41 +623,49 @@
 			<div class="row no-gutters justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Projects</h1>
-					<h2 class="mb-4">Our Projects</h2>
+					<h2 class="mb-4">Mes Projects</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 				</div>
 			</div>
 			<div class="row no-gutters">
 				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-1.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+					<a href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+							style="background-image: url(images/site-e-commerce-HTML-CSS.jpg);">
+							<div class="overlay"></div>
+							<div class="text text-center p-4">
+								<h3>Réalisation
+									d'un site e-commerce responsive en HTML-CSS</h3>
+								<span>Web Design</span>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-2.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+					<a href="https://alpernuage.github.io/INCEPTION-Film-Poster/">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+							style="background-image: url(images/INCEPTION-film-poster.jpg);">
+							<div class="overlay"></div>
+							<div class="text text-center p-4">
+								<h3>Réalisation film poster
+									INCEPTION</h3>
+								<span>Web Design</span>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
-
 				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-3.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+					<a href="https://alpernuage.github.io/Bootstrap-first-project-web-site/">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+							style="background-image: url(images/bootstrap-site-e-commerce.jpg);">
+							<div class="overlay"></div>
+							<div class="text text-center p-4">
+								<h3>Réalisation
+									d'un site e-commerce avec Bootstrap</h3>
+								<span>Web Design</span>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
