--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-4">
+				<!-- <div class="col-md-4">
 					<a href="https://alpernuage.github.io/INCEPTION-Film-Poster/">
 						<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 							style="background-image: url(images/INCEPTION-film-poster.jpg);">
@@ -653,7 +653,7 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-md-4">
 					<a href="https://alpernuage.github.io/Bootstrap-first-project-web-site/">
 						<div class="project img ftco-animate d-flex justify-content-center align-items-center"
