add first modal and tested with link to web site

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 						<div class="row progress-circle mb-5">
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4 h-100">
-									<h2 class="h5 font-weight-bold text-center mb-4">FRONT-END</h2>
+									<h2 class="h5 font-weight-bold pl-4 mb-4">FRONT-END</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-html5-plain colored"></i>HTML</li>
@@ -337,7 +337,7 @@
 							</div>
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4 h-100">
-									<h2 class="h5 font-weight-bold text-center mb-4">BACK-END</h2>
+									<h2 class="h5 font-weight-bold pl-4 mb-4">BACK-END</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-php-plain colored"></i>PHP</li>
@@ -355,7 +355,7 @@
 							</div>
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4 h-100">
-									<h2 class="h5 font-weight-bold text-center mb-4">GESTION DE PROJET</h2>
+									<h2 class="h5 font-weight-bold pl-4 mb-4">GESTION DE PROJET</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-git-plain colored"></i>Git</li>
@@ -370,7 +370,7 @@
 							</div>
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4 h-100">
-									<h2 class="h5 font-weight-bold text-center mb-4">DESIGN & BUREAUTIQUE</h2>
+									<h2 class="h5 font-weight-bold pl-4 mb-4">DESIGN & BUREAUTIQUE</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-figma-plain colored"></i>Figma (UI, UX, prototypage)</li>
@@ -383,7 +383,7 @@
 							</div>
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4 h-100">
-									<h2 class="h5 font-weight-bold text-center mb-4">CMS</h2>
+									<h2 class="h5 font-weight-bold pl-4 mb-4">CMS</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-wordpress-plain colored"></i>WordPress</li>
@@ -410,7 +410,7 @@
 			</div>
 			<div class="card-group">
 				<div class="card shadow">
-					<a href="https://alpernuage.github.io/First-web-site-e-commerce-responsive" target="_blank">
+					<a href="#" data-toggle="modal" data-target="#exampleModal" target="_blank">
 						<img class="card-img-top" src="images/site-e-commerce-HTML-CSS.jpg" alt="image of web site O2">
 						<div class="card-body">
 							<h5 class="card-title">O<sub>2</sub></h5>
@@ -445,7 +445,7 @@
 							<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
 							<span class="badge badge-info">HTML</span>
 							<span class="badge badge-info">CSS</span>
-							<p class="card-text text-secondary">Réalisation film poster. <br>&nbsp</p>
+							<p class="card-text text-secondary">Réalisation film poster.<br>&nbsp</p>
 							<p class="card-text text-primary">Voir plus</p>
 						</div>
 					</a>
@@ -454,6 +454,39 @@
 		</div>
 		</div>
 	</section>
+
+
+	<!-- MODALS -->
+	<!-- Button trigger modal -->
+	<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+		Launch demo modal
+	</button> -->
+
+	<!-- Modal projet 1 "O2" HTML CSS-->
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					...
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<a class="btn btn-primary" href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/"
+						target="_blank">Voir le site</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End of modal projet 1 O2 HTML CSS -->
+
+	<!-- END OF MODALS -->
 
 
 	<!-- 
