add card footer to align content

--- a/index.html
+++ b/index.html
@@ -421,6 +421,9 @@
 								d'un site e-commerce responsive en HTML-CSS</p>
 							<p class="card-text text-secondary text-primary">Voir plus</p>
 						</div>
+						<div class="card-footer">
+							<small class="text-primary">Voir plus</small>
+						</div>
 					</a>
 				</div>
 				<div class="card shadow">
@@ -435,22 +438,28 @@
 								d'un site e-commerce avec Bootstrap.</p>
 							<p class="card-text text-primary">Voir plus</p>
 						</div>
+						<div class="card-footer">
+							<small class="text-primary">Voir plus</small>
+						</div>
 					</a>
 				</div>
-				<div class="card shadow">
-					<a href="https://alpernuage.github.io/INCEPTION-Film-Poster/" target="_blank">
+				<a href="https://alpernuage.github.io/INCEPTION-Film-Poster/" target="_blank">
+					<div class="card shadow">
 						<img class="card-img-top" src="images/inception-1.jpg" alt="INCEPTION film poster image">
 						<div class="card-body">
 							<h5 class="card-title">INCEPTION</h5>
 							<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
 							<span class="badge badge-info">HTML</span>
 							<span class="badge badge-info">CSS</span>
-							<p class="card-text text-secondary">Réalisation film poster.<br>&nbsp</p>
+							<p class="card-text text-secondary">Réalisation film poster.</p>
+						</div>
+						<div class="card-footer">
+							<!-- <p class="card-text text-primary">Voir plus</p> -->
 							<p class="card-text text-primary">Voir plus</p>
 						</div>
-					</a>
-				</div>
+				</a>
 			</div>
+		</div>
 		</div>
 		</div>
 	</section>
