add example modal content

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 							<span class="badge badge-info">CSS</span>
 							<p class="card-text text-secondary">Réalisation
 								d'un site e-commerce responsive en HTML-CSS</p>
-							<p class="card-text text-secondary text-primary">Voir plus</p>
+							<!-- <p class="card-text text-secondary text-primary">Voir plus</p> -->
 						</div>
 						<div class="card-footer">
 							<small class="text-primary">Voir plus</small>
@@ -436,15 +436,15 @@
 							<span class="badge badge-info">Bootstrap</span>
 							<p class="card-text text-secondary">Réalisation
 								d'un site e-commerce avec Bootstrap.</p>
-							<p class="card-text text-primary">Voir plus</p>
+							<!-- <p class="card-text text-primary">Voir plus</p> -->
 						</div>
 						<div class="card-footer">
 							<small class="text-primary">Voir plus</small>
 						</div>
 					</a>
 				</div>
-				<a href="https://alpernuage.github.io/INCEPTION-Film-Poster/" target="_blank">
-					<div class="card shadow">
+				<div class="card shadow">
+					<a href="https://alpernuage.github.io/INCEPTION-Film-Poster/" target="_blank">
 						<img class="card-img-top" src="images/inception-1.jpg" alt="INCEPTION film poster image">
 						<div class="card-body">
 							<h5 class="card-title">INCEPTION</h5>
@@ -454,12 +454,12 @@
 							<p class="card-text text-secondary">Réalisation film poster.</p>
 						</div>
 						<div class="card-footer">
+							<small class="card-text text-primary">Voir plus</small>
 							<!-- <p class="card-text text-primary">Voir plus</p> -->
-							<p class="card-text text-primary">Voir plus</p>
 						</div>
-				</a>
+					</a>
+				</div>
 			</div>
-		</div>
 		</div>
 		</div>
 	</section>
@@ -483,10 +483,60 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					...
+					<h1>Réalisation d'un site e-commerce avec HTML-CSS</h1>
+					<h2>
+						Concept de l’entreprise
+					</h2>
+					<h3>
+						Nom de l’entreprise
+					</h3>
+					O <sub>2</sub>
+					<h3>
+						Type de marchandises vendues
+					</h3>
+					OBJECTIFS DE CAMÉRA
+					<h3>
+						Clientèle Principale
+					</h3>
+					Photographes Particulier
+					<h3>
+						Clientèle Secondaire Ciblée
+					</h3>
+					Grossistes
+					<h3>
+						Choix Esthétiques
+					</h3>
+					<h4>
+						Choix des couleurs
+					</h4>
+					Les couleurs ont été appliqués en inspirant des sites concurrents.
+					Quand nous survolons sur des boutons et des liens, la couleur devient jaune. Cette
+					couleur est synonymes de qualité élevée et de confiance.
+					La couleur foncé en haut et en bas de la page a été choisi pour donner un contraste.
+					Arrière plan de la page est blanc pour avoir un visuel doux.
+					<h4>
+						Disposition des textes
+					</h4>
+					La police des text est très proche à celles de concurrents.
+					La taille de police est plus grande dans des zone où attirer l’attention est ciblé.
+					<h4>
+
+						Disposition des images
+					</h4>
+					Les images ont le droit d'utilisation libre.
+					La première grande image est une image d’objectif de caméra avec une partie flou
+					pour éliminer les détailles secondaires.
+					<h4>
+
+						Disposition de logo
+					</h4>
+					Le logo symbolise Oxygène sortant de l’objectif de caméra. Il renvoie un sentiment positif à
+					l’utilisateur. Comme la respiration est indispensable pour vivre, le logo représente
+					l'élément essentiel de caméra. Grâce à l’objectif de notre marque les photos peuvent être
+					vivantes.
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
 					<a class="btn btn-primary" href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/"
 						target="_blank">Voir le site</a>
 				</div>
