add first modal image

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 	<!-- Modal projet 1 "O2" HTML CSS-->
 	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 		aria-hidden="true">
-		<div class="modal-dialog" role="document">
+		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
@@ -483,6 +483,24 @@
 					</button>
 				</div>
 				<div class="modal-body">
+					<div class="row">
+						<div class="col-6">
+							<img class="img-fluid" src="images/modal-projet1-html-css-photo1.jpg"
+								alt="modal-projet1-html-css-photo1">
+						</div>
+						<div class="col-6">
+							<img class="img-fluid" src="images/modal-projet1-html-css-photo2.jpg"
+								alt="modal-projet1-html-css-photo2">
+						</div>
+						<div class="col-6">
+							<img class="img-fluid" src="images/modal-projet1-html-css-photo3.jpg"
+								alt="modal-projet1-html-css-photo3">
+						</div>
+						<div class="col-6">
+							<img class="img-fluid" src="images/modal-projet1-html-css-photo4.jpg"
+								alt="modal-projet1-html-css-photo4">
+						</div>
+					</div>
 					<h1>Réalisation d'un site e-commerce avec HTML-CSS</h1>
 					<h2>
 						Concept de l’entreprise
