delete modal create a page for first project

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 			</div>
 			<div class="card-group">
 				<div class="card shadow">
-					<a href="#" data-toggle="modal" data-target="#exampleModal" target="_blank">
+					<a href="./projet1-html-css.html" target="_blank">
 						<img class="card-img-top" src="images/site-e-commerce-HTML-CSS.jpg" alt="image of web site O2">
 						<div class="card-body">
 							<h5 class="card-title">O<sub>2</sub></h5>
@@ -451,7 +451,7 @@
 							<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
 							<span class="badge badge-info">HTML</span>
 							<span class="badge badge-info">CSS</span>
-							<p class="card-text text-secondary">Réalisation film poster.</p>
+							<p class="card-text text-secondary paragrahpeOneLine">Réalisation film poster.</p>
 						</div>
 						<div class="card-footer">
 							<small class="card-text text-primary">Voir plus</small>
@@ -463,108 +463,6 @@
 		</div>
 		</div>
 	</section>
-
-
-	<!-- MODALS -->
-	<!-- Button trigger modal -->
-	<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-		Launch demo modal
-	</button> -->
-
-	<!-- Modal projet 1 "O2" HTML CSS-->
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-		aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<div class="row">
-						<div class="col-6">
-							<img class="img-fluid" src="images/modal-projet1-html-css-photo1.jpg"
-								alt="modal-projet1-html-css-photo1">
-						</div>
-						<div class="col-6">
-							<img class="img-fluid" src="images/modal-projet1-html-css-photo2.jpg"
-								alt="modal-projet1-html-css-photo2">
-						</div>
-						<div class="col-6">
-							<img class="img-fluid" src="images/modal-projet1-html-css-photo3.jpg"
-								alt="modal-projet1-html-css-photo3">
-						</div>
-						<div class="col-6">
-							<img class="img-fluid" src="images/modal-projet1-html-css-photo4.jpg"
-								alt="modal-projet1-html-css-photo4">
-						</div>
-					</div>
-					<h1>Réalisation d'un site e-commerce avec HTML-CSS</h1>
-					<h2>
-						Concept de l’entreprise
-					</h2>
-					<h3>
-						Nom de l’entreprise
-					</h3>
-					O <sub>2</sub>
-					<h3>
-						Type de marchandises vendues
-					</h3>
-					OBJECTIFS DE CAMÉRA
-					<h3>
-						Clientèle Principale
-					</h3>
-					Photographes Particulier
-					<h3>
-						Clientèle Secondaire Ciblée
-					</h3>
-					Grossistes
-					<h3>
-						Choix Esthétiques
-					</h3>
-					<h4>
-						Choix des couleurs
-					</h4>
-					Les couleurs ont été appliqués en inspirant des sites concurrents.
-					Quand nous survolons sur des boutons et des liens, la couleur devient jaune. Cette
-					couleur est synonymes de qualité élevée et de confiance.
-					La couleur foncé en haut et en bas de la page a été choisi pour donner un contraste.
-					Arrière plan de la page est blanc pour avoir un visuel doux.
-					<h4>
-						Disposition des textes
-					</h4>
-					La police des text est très proche à celles de concurrents.
-					La taille de police est plus grande dans des zone où attirer l’attention est ciblé.
-					<h4>
-
-						Disposition des images
-					</h4>
-					Les images ont le droit d'utilisation libre.
-					La première grande image est une image d’objectif de caméra avec une partie flou
-					pour éliminer les détailles secondaires.
-					<h4>
-
-						Disposition de logo
-					</h4>
-					Le logo symbolise Oxygène sortant de l’objectif de caméra. Il renvoie un sentiment positif à
-					l’utilisateur. Comme la respiration est indispensable pour vivre, le logo représente
-					l'élément essentiel de caméra. Grâce à l’objectif de notre marque les photos peuvent être
-					vivantes.
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-					<a class="btn btn-primary" href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/"
-						target="_blank">Voir le site</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- End of modal projet 1 O2 HTML CSS -->
-
-	<!-- END OF MODALS -->
-
 
 	<!-- 
 	<section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
