add space between project cards

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 				</div>
 			</div>
-			<div class="card-group">
+			<div class="card-deck">
 				<div class="card shadow">
 					<a href="./projet1-html-css.html" target="_blank">
 						<img class="card-img-top" src="images/site-e-commerce-HTML-CSS.jpg" alt="image of web site O2">
