--- a/projet1-html-css.html
+++ b/projet1-html-css.html
@@ -27,77 +27,90 @@
 </head>
 
 <body>
-
-
-	<div class="container">
+	<nav class="navbar sticky-top navbar-light bg-light">
+		<a class="navbar-brand" href="#">Akbulut</a>
+		<a href="https://github.com/alpernuage/First-web-site-e-commerce-responsive"> <button type="button"
+				class="btn btn-outline-primary">Voir le site</button></a>
+		<button type="button" class="btn btn-outline-secondary">Retour</button>
+	</nav>
+	<div class="container mb-4">
 		<div class="row">
-			<div class="col-6">
+			<div class="col-6 my-2">
 				<img class="img-fluid" src="images/modal-projet1-html-css-photo1.jpg"
 					alt="modal-projet1-html-css-photo1">
 			</div>
-			<div class="col-6">
-				<img class="img-fluid" src="images/modal-projet1-html-css-photo2.jpg"
-					alt="modal-projet1-html-css-photo2">
+			<div class="col-6 my-2">
+				<div class="card shadow h-100">
+					<div class="card-body">
+						<h5 class="card-title">O<sub>2</sub></h5>
+						<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
+						<span class="badge badge-info">HTML</span>
+						<span class="badge badge-info">CSS</span>
+						<p class="card-text text-secondary">Réalisation
+							d'un site e-commerce responsive en HTML-CSS</p>
+						<!-- <p class="card-text text-secondary text-primary">Voir plus</p> -->
+					</div>
+					<div class="card-footer">
+						<small class="text-primary">Voir plus</small>
+					</div>
+				</div>
 			</div>
-			<div class="col-6">
+			<div class="col-6 my-2">
+				<div class="card shadow h-100">
+					<div class="card-body">
+						<h5 class="card-title">O<sub>2</sub></h5>
+						<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
+						<span class="badge badge-info">HTML</span>
+						<span class="badge badge-info">CSS</span>
+						<p class="card-text text-secondary">Réalisation
+							d'un site e-commerce responsive en HTML-CSS</p>
+						<!-- <p class="card-text text-secondary text-primary">Voir plus</p> -->
+					</div>
+					<div class="card-footer">
+						<small class="text-primary">Voir plus</small>
+					</div>
+				</div>
+			</div>
+			<div class="col-6 my-2">
 				<img class="img-fluid" src="images/modal-projet1-html-css-photo3.jpg"
 					alt="modal-projet1-html-css-photo3">
 			</div>
-			<div class="col-6">
-				<img class="img-fluid" src="images/modal-projet1-html-css-photo4.jpg"
-					alt="modal-projet1-html-css-photo4">
+			<div class="col-6 my-2">
+				<img class="img-fluid" src="images/modal-projet1-html-css-photo2.jpg"
+					alt="modal-projet1-html-css-photo2">
+			</div>
+			<div class="col-6 my-2">
+				<div class="card shadow h-100">
+					<div class="card-body">
+						<h5 class="card-title">O<sub>2</sub></h5>
+						<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
+						<span class="badge badge-info">HTML</span>
+						<span class="badge badge-info">CSS</span>
+						<p class="card-text text-secondary">Réalisation
+							d'un site e-commerce responsive en HTML-CSS</p>
+						<!-- <p class="card-text text-secondary text-primary">Voir plus</p> -->
+					</div>
+					<div class="card-footer">
+						<small class="text-primary">Voir plus</small>
+					</div>
+				</div>
 			</div>
 		</div>
-		<h1>Réalisation d'un site e-commerce avec HTML-CSS</h1>
-		<h2> Concept de l’entreprise </h2>
-		<h3> Nom de l’entreprise </h3>
-		O <sub>2</sub>
-		<h3> Type de marchandises vendues </h3>
-		OBJECTIFS DE CAMÉRA
-		<h3> Clientèle Principale </h3>
-		Photographes Particulier
-		<h3> Clientèle Secondaire Ciblée </h3>
-		Grossistes
-		<h3> Choix Esthétiques </h3>
-		<h4>
-			Choix des couleurs
-		</h4> Les couleurs ont été appliqués en inspirant des sites concurrents.
-		Quand nous survolons sur des boutons et des liens, la couleur devient jaune. Cette
-		couleur est synonymes de qualité élevée et de confiance.
-		La couleur foncé en haut et en bas de la page a été choisi pour donner un contraste.
-		Arrière plan de la page est blanc pour avoir un visuel doux. <h4>
-			Disposition des textes
-		</h4> La police des text est très proche à celles de concurrents.
-		La taille de police est plus grande dans des zone où attirer l’attention est ciblé. <h4>
-
-			Disposition des images
-		</h4> Les images ont le droit d'utilisation libre.
-		La première grande image est une image d’objectif de caméra avec une partie flou
-		pour éliminer les détailles secondaires. <h4>
-
-			Disposition de logo
-		</h4> Le logo symbolise Oxygène sortant de l’objectif de caméra. Il renvoie un sentiment positif à
-		l’utilisateur. Comme la respiration est indispensable pour vivre, le logo représente
-		l'élément essentiel de caméra. Grâce à l’objectif de notre marque les photos peuvent être vivantes.
-	</div>
 
 
-
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery-migrate-3.0.1.min.js"></script>
-	<script src="js/popper.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.easing.1.3.js"></script>
-	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/jquery.stellar.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/aos.js"></script>
-	<script src="js/jquery.animateNumber.min.js"></script>
-	<script src="js/scrollax.min.js"></script>
-
-	<script src="js/main.js"></script>
-
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery-migrate-3.0.1.min.js"></script>
+		<script src="js/popper.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/jquery.easing.1.3.js"></script>
+		<script src="js/jquery.waypoints.min.js"></script>
+		<script src="js/jquery.stellar.min.js"></script>
+		<script src="js/owl.carousel.min.js"></script>
+		<script src="js/jquery.magnific-popup.min.js"></script>
+		<script src="js/aos.js"></script>
+		<script src="js/jquery.animateNumber.min.js"></script>
+		<script src="js/scrollax.min.js"></script>
+		<script src="js/main.js"></script>
 </body>
 
 </html>
