--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 	</section>
 
 	<section class="ftco-section ftco-project" id="projects-section">
-		<div class="container-fluid px-md-0">
+		<div class="container-fluid">
 			<div class="row no-gutters justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Projets</h1>
