--- a/projet1-html-css.html
+++ b/projet1-html-css.html
@@ -29,70 +29,56 @@
 <body>
 	<nav class="navbar sticky-top navbar-light bg-light">
 		<a class="navbar-brand" href="#">Akbulut</a>
-		<a href="https://github.com/alpernuage/First-web-site-e-commerce-responsive"> <button type="button"
-				class="btn btn-outline-primary">Voir le site</button></a>
-		<button type="button" class="btn btn-outline-secondary">Retour</button>
+
 	</nav>
 	<div class="container mb-4">
 		<div class="row">
-			<div class="col-6 my-2">
-				<img class="img-fluid" src="images/modal-projet1-html-css-photo1.jpg"
-					alt="modal-projet1-html-css-photo1">
-			</div>
-			<div class="col-6 my-2">
-				<div class="card shadow h-100">
-					<div class="card-body">
-						<h5 class="card-title">O<sub>2</sub></h5>
-						<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
+			<div class="col-6">
+				<div class="h-50">
+					<p>Concept :</p>
+					<h6 class="card-subtitle mb-2 text-muted mb-4">Réalisation
+						d'une page d'accueil d'un site e-commerce responsive en HTML-CSS</h6>
+					<p>Catégorie :</p>
+					<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, quo. Lorem ipsum dolor sit
+						amet consectetur adipisicing elit. Soluta possimus amet doloribus temporibus minus hic!
+					</p>
+				</div>
+				<div class="h-50">
+					<h6 class="card-subtitle mb-2 text-muted mb-3">Repo GitHub :
+						<a href="https://github.com/alpernuage/First-web-site-e-commerce-responsive">Site e-commerce O
+							<sub>2</sub></a>
+					</h6>
+					<h6 class="card-subtitle mb-2 text-muted my-3">Lien vers la documentation :
+						<a
+							href="https://github.com/alpernuage/First-web-site-e-commerce-responsive/blob/master/Documentation%20de%20Pr%C3%A9sentation.pdf">/Documentation_
+							du_projet</a>
+					</h6>
+					<h6 class="card-subtitle mb-2 text-muted mt-3">Langages/Outils :
 						<span class="badge badge-info">HTML</span>
 						<span class="badge badge-info">CSS</span>
-						<p class="card-text text-secondary">Réalisation
-							d'un site e-commerce responsive en HTML-CSS</p>
-						<!-- <p class="card-text text-secondary text-primary">Voir plus</p> -->
-					</div>
-					<div class="card-footer">
-						<small class="text-primary">Voir plus</small>
+						<span class="badge badge-info">Figma</span>
+					</h6>
+					<div class="align-bottom">
+						<a href="https://github.com/alpernuage/First-web-site-e-commerce-responsive"> <button
+								type="button" class="btn btn-outline-primary">Voir le site</button></a>
+						<a href="index.html"> <button type="button" class="btn btn-outline-primary">Retour</button></a>
 					</div>
 				</div>
 			</div>
-			<div class="col-6 my-2">
-				<div class="card shadow h-100">
-					<div class="card-body">
-						<h5 class="card-title">O<sub>2</sub></h5>
-						<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
-						<span class="badge badge-info">HTML</span>
-						<span class="badge badge-info">CSS</span>
-						<p class="card-text text-secondary">Réalisation
-							d'un site e-commerce responsive en HTML-CSS</p>
-						<!-- <p class="card-text text-secondary text-primary">Voir plus</p> -->
-					</div>
-					<div class="card-footer">
-						<small class="text-primary">Voir plus</small>
-					</div>
+			<div class="col-6">
+				<div class="mb-4 shadow bg-white rounded">
+					<img class="img-fluid" src="images/modal-projet1-html-css-photo1.jpg"
+						alt="modal-projet1-html-css-photo1">
 				</div>
-			</div>
-			<div class="col-6 my-2">
-				<img class="img-fluid" src="images/modal-projet1-html-css-photo3.jpg"
-					alt="modal-projet1-html-css-photo3">
-			</div>
-			<div class="col-6 my-2">
-				<img class="img-fluid" src="images/modal-projet1-html-css-photo2.jpg"
-					alt="modal-projet1-html-css-photo2">
-			</div>
-			<div class="col-6 my-2">
-				<div class="card shadow h-100">
-					<div class="card-body">
-						<h5 class="card-title">O<sub>2</sub></h5>
-						<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
-						<span class="badge badge-info">HTML</span>
-						<span class="badge badge-info">CSS</span>
-						<p class="card-text text-secondary">Réalisation
-							d'un site e-commerce responsive en HTML-CSS</p>
-						<!-- <p class="card-text text-secondary text-primary">Voir plus</p> -->
-					</div>
-					<div class="card-footer">
-						<small class="text-primary">Voir plus</small>
-					</div>
+				<div class="my-4 shadow bg-white rounded">
+					<img class="img-fluid" src="images/modal-projet1-html-css-photo3.jpg"
+						alt="modal-projet1-html-css-photo3">
+				</div>
+				<div class="mt-4 shadow bg-white rounded">
+					<img class="img-fluid" src="images/modal-projet1-html-css-photo2.jpg"
+						alt="modal-projet1-html-css-photo2">
 				</div>
 			</div>
 		</div>
