--- a/projet1-html-css.html
+++ b/projet1-html-css.html
@@ -24,61 +24,83 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet"
 		href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+	<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
+
 </head>
 
 <body>
-	<nav class="navbar sticky-top navbar-light bg-light">
+	<!-- <nav class="navbar sticky-top navbar-light bg-light">
 		<a class="navbar-brand" href="#">Akbulut</a>
 
-	</nav>
-	<div class="container mb-4">
+	</nav> -->
+	<div class="container my-4">
 		<div class="row">
 			<div class="col-6">
-				<div class="h-50">
-					<p>Concept :</p>
-					<h6 class="card-subtitle mb-2 text-muted mb-4">Réalisation
-						d'une page d'accueil d'un site e-commerce responsive en HTML-CSS</h6>
-					<p>Catégorie :</p>
-					<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, quo. Lorem ipsum dolor sit
-						amet consectetur adipisicing elit. Soluta possimus amet doloribus temporibus minus hic!
-					</p>
-				</div>
-				<div class="h-50">
-					<h6 class="card-subtitle mb-2 text-muted mb-3">Repo GitHub :
-						<a href="https://github.com/alpernuage/First-web-site-e-commerce-responsive">Site e-commerce O
-							<sub>2</sub></a>
-					</h6>
-					<h6 class="card-subtitle mb-2 text-muted my-3">Lien vers la documentation :
-						<a
-							href="https://github.com/alpernuage/First-web-site-e-commerce-responsive/blob/master/Documentation%20de%20Pr%C3%A9sentation.pdf">/Documentation_
-							du_projet</a>
-					</h6>
-					<h6 class="card-subtitle mb-2 text-muted mt-3">Langages/Outils :
-						<span class="badge badge-info">HTML</span>
-						<span class="badge badge-info">CSS</span>
-						<span class="badge badge-info">Figma</span>
-					</h6>
-					<div class="align-bottom">
-						<a href="https://github.com/alpernuage/First-web-site-e-commerce-responsive"> <button
-								type="button" class="btn btn-outline-primary">Voir le site</button></a>
-						<a href="index.html"> <button type="button" class="btn btn-outline-primary">Retour</button></a>
-					</div>
-				</div>
+				<h1 class="text-center">O<sub>2</sub></h1>
+				<h2>Le Projet :
+				</h2>
+				<a href="https://github.com/alpernuage/First-web-site-e-commerce-responsive">lien vers
+					repository</a> /
+				<a
+					href="https://github.com/alpernuage/First-web-site-e-commerce-responsive/blob/master/Documentation%20de%20Pr%C3%A9sentation.pdf">documentation</a>
+				/
+				<a href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/">site en ligne
+					(github pages)</a>
+				<span class="badge badge-info">HTML</span>
+				<span class="badge badge-info">CSS</span>
+				<span class="badge badge-info">Figma</span>
+				<h2>Concept :</h2>
+				<h5>Conception et réalisation
+					d'une page d'accueil d'un site e-commerce responsive en HTML-CSS</h5>
+				<p>Le concept du site a dû être imaginé : nom, clientèle, produits, identité graphique.
+					Les polices et les images devaient être libres de droits.
+					Les contenus devaient être équilibrés et symétriques
+					Le design devait répondre aux standards actuels du design, moderne et harmonieux, en adéquation avec
+					l'image générale que je souhaitais dégager de mon concept.</p>
+				<h2>Choix graphiques :</h2>
+				<p><span class="text-primary">Couleurs : </span>
+					<!-- <span class="text-white bg-484b4e">#484b4e</span> -->
+					<span class="text-dark bg-FFDF3B">#FFDF3B</span>
+					<span class="text-white bg-2C3E50">#2C3E50</span>
+					<span class="text-white bg-202427">#202427</span>
+					<!-- <span class="text-white bg-baa32b">#baa32b</span> -->
+					<!-- <span class="text-dark bg-e7eae6">#e7eae6</span> -->
+					<span class="text-dark bg-EAE8E7">#EAE8E7</span>
+				</p>
+				<p> Les couleurs ont été appliqués en inspirant des sites concurrents.
+					La couleur foncé en haut et en bas de la page a été choisi pour donner un contraste.
+					Arrière plan de la page est blanc pour avoir un visuel doux.
+				</p>
+				<p>
+					<span class="text-primary">Polices : </span>
+					Montserrat, sans-serif</p>
+				<p>
+					La police des text est très proche à celles de concurrents.
+					La taille de police est plus grande dans des zone où attirer l’attention est ciblé.
+				</p>
 			</div>
 			<div class="col-6">
 				<div class="mb-4 shadow bg-white rounded">
-					<img class="img-fluid" src="images/modal-projet1-html-css-photo1.jpg"
-						alt="modal-projet1-html-css-photo1">
+					<a data-fancybox="gallery" href="images/projet-html-css-big.jpg"><img class="img-fluid"
+							src="images/projet-html-css-big.jpg"></a>
 				</div>
 				<div class="my-4 shadow bg-white rounded">
-					<img class="img-fluid" src="images/modal-projet1-html-css-photo3.jpg"
-						alt="modal-projet1-html-css-photo3">
+					<a data-fancybox="gallery" href="images/projet-html-css-body.jpg"><img class="img-fluid"
+							src="images/projet-html-css-body.jpg"></a>
 				</div>
-				<div class="mt-4 shadow bg-white rounded">
-					<img class="img-fluid" src="images/modal-projet1-html-css-photo2.jpg"
-						alt="modal-projet1-html-css-photo2">
+				<div class="my-4 shadow bg-white rounded">
+					<a data-fancybox="gallery" href="images/projet-html-css-products.jpg"><img class="img-fluid"
+							src="images/projet-html-css-products.jpg"></a>
+				</div>
+				<div class="d-flex justify-content-around pt-4">
+					<a href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/"> <button type="button"
+							class="btn btn-outline-primary">Voir le site</button></a>
+					<a href="index.html"> <button type="button" class="btn btn-outline-secondary">Retour</button></a>
 				</div>
 			</div>
 		</div>
