--- a/projet1-html-css.html
+++ b/projet1-html-css.html
@@ -44,12 +44,14 @@
 				<h1 class="text-center">O<sub>2</sub></h1>
 				<h2>Le Projet :
 				</h2>
-				<a href="https://github.com/alpernuage/First-web-site-e-commerce-responsive">lien vers
+				<a class="hoverLinkProject"
+					href="https://github.com/alpernuage/First-web-site-e-commerce-responsive">lien vers
 					repository</a> /
-				<a
+				<a class="hoverLinkProject"
 					href="https://github.com/alpernuage/First-web-site-e-commerce-responsive/blob/master/Documentation%20de%20Pr%C3%A9sentation.pdf">documentation</a>
 				/
-				<a href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/">site en ligne
+				<a class="hoverLinkProject"
+					href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/">site en ligne
 					(github pages)</a>
 				<span class="badge badge-info">HTML</span>
 				<span class="badge badge-info">CSS</span>
