--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Accueil</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>À propos</span></a></li>
 					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Résumé</span></a></li>
-					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projets</span></a></li>
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 				</ul>
 			</div>
