--- a/projet1-html-css.html
+++ b/projet1-html-css.html
@@ -38,30 +38,75 @@
 		<a class="navbar-brand" href="#">Akbulut</a>
 
 	</nav> -->
+	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
+		<div class="container">
+			<a class="navbar-brand" href="index.html"><span>A</span>kbulut</a>
+			<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse"
+				data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="oi oi-menu"></span> Menu
+			</button>
+
+			<div class="collapse navbar-collapse" id="ftco-nav">
+				<ul class="navbar-nav nav ml-auto">
+					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Accueil</span></a></li>
+					<li class="nav-item"><a href="#about-section" class="nav-link"><span>À propos</span></a></li>
+					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Résumé</span></a></li>
+					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projets</span></a></li>
+					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<section class="hero-wrap">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text justify-content-center align-items-center" style="height: 350px;">
+				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
+					<div class="text text-center">
+						<h1><br>
+							Alper AKBULUT
+							<br>
+							O<sub>2</sub></h1>
+						<h2 class="d-inline">Le Projet :
+						</h2>
+						<a class="hoverLinkProject"
+							href="https://github.com/alpernuage/First-web-site-e-commerce-responsive">lien vers
+							repository</a> /
+						<a class="hoverLinkProject"
+							href="https://github.com/alpernuage/First-web-site-e-commerce-responsive/blob/master/Documentation%20de%20Pr%C3%A9sentation.pdf">documentation</a>
+						/
+						<a class="hoverLinkProject"
+							href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/">site en
+							ligne
+							(github pages)</a>
+						<br>
+						<span class="badge badge-info">HTML</span>
+						<span class="badge badge-info">CSS</span>
+						<span class="badge badge-info">Figma</span>
+
+						<!-- BUTTONS -->
+						<div class="d-flex justify-content-around pt-4">
+							<a href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/"> <button
+									type="button" class="btn btn-outline-primary">Voir le site</button></a>
+							<a href="index.html"> <button type="button"
+									class="btn btn-outline-secondary">Retour</button></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</section>
 	<div class="container my-4">
 		<div class="row">
 			<div class="col-6">
-				<h1 class="text-center">O<sub>2</sub></h1>
-				<h2>Le Projet :
-				</h2>
-				<a class="hoverLinkProject"
-					href="https://github.com/alpernuage/First-web-site-e-commerce-responsive">lien vers
-					repository</a> /
-				<a class="hoverLinkProject"
-					href="https://github.com/alpernuage/First-web-site-e-commerce-responsive/blob/master/Documentation%20de%20Pr%C3%A9sentation.pdf">documentation</a>
-				/
-				<a class="hoverLinkProject"
-					href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/">site en ligne
-					(github pages)</a>
-				<span class="badge badge-info">HTML</span>
-				<span class="badge badge-info">CSS</span>
-				<span class="badge badge-info">Figma</span>
 				<h2>Concept :</h2>
 				<h5>Conception et réalisation
 					d'une page d'accueil d'un site e-commerce responsive en HTML-CSS</h5>
 				<p>Le concept du site a dû être imaginé : nom, clientèle, produits, identité graphique.
 					Les polices et les images devaient être libres de droits.
-					Les contenus devaient être équilibrés et symétriques
+					<br>
+					Les contenus devaient être équilibrés et symétriques.
 					Le design devait répondre aux standards actuels du design, moderne et harmonieux, en adéquation avec
 					l'image générale que je souhaitais dégager de mon concept.</p>
 				<h2>Choix graphiques :</h2>
@@ -76,6 +121,7 @@
 				</p>
 				<p> Les couleurs ont été appliqués en inspirant des sites concurrents.
 					La couleur foncé en haut et en bas de la page a été choisi pour donner un contraste.
+					<br>
 					Arrière plan de la page est blanc pour avoir un visuel doux.
 				</p>
 				<p>
@@ -98,11 +144,6 @@
 				<div class="my-4 shadow bg-white rounded">
 					<a data-fancybox="gallery" href="images/projet-html-css-products.jpg"><img class="img-fluid"
 							src="images/projet-html-css-products.jpg"></a>
-				</div>
-				<div class="d-flex justify-content-around pt-4">
-					<a href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/"> <button type="button"
-							class="btn btn-outline-primary">Voir le site</button></a>
-					<a href="index.html"> <button type="button" class="btn btn-outline-secondary">Retour</button></a>
 				</div>
 			</div>
 		</div>
