add icons missing

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	<link rel="stylesheet" href="css/ionicons.min.css">
 
 	<link rel="stylesheet" href="css/flaticon.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+		integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
+
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet"
@@ -322,7 +325,7 @@
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-nodejs-plain colored"></i>Node.js</li>
 										<li class="list-group-item d-flex border-0">
-											<i class="devicon-plain colored"></i>Sys Unix</li>
+											<i class="fab fa-linux"></i>&nbspSys Unix</li>
 									</ul>
 								</div>
 							</div>
@@ -337,7 +340,8 @@
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-trello-plain colored"></i>Trello</li>
 										<li class="list-group-item d-flex border-0">
-											<i class="devicon-plain colored"></i>Scrum</li>
+											<i class="fas fa-tasks tech-logo" aria-hidden="true"></i>
+											Scrum</li>
 									</ul>
 								</div>
 							</div>
@@ -346,11 +350,9 @@
 									<h2 class="h5 font-weight-bold pl-4 mb-4">DESIGN & BUREAUTIQUE</h2>
 									<ul class="list-group">
 										<li class="list-group-item d-flex border-0">
-											<i class="devicon-figma-plain colored"></i>Figma (UI, UX, prototypage)</li>
+											<i class="fab fa-figma"></i>&nbspFigma (UI, UX,<br> &nbspprototypage)</li>
 										<li class="list-group-item d-flex border-0">
-											<i class="devicon-google-plain colored"></i>Suite Office</li>
-										<li class="list-group-item d-flex border-0">
-											<i class="devicon-google-plain colored"></i>Google Drive</li>
+											<i class="devicon-google-plain colored"></i>Google Suite</li>
 									</ul>
 								</div>
 							</div>
@@ -361,7 +363,7 @@
 										<li class="list-group-item d-flex border-0">
 											<i class="devicon-wordpress-plain colored"></i>WordPress</li>
 										<li class="list-group-item d-flex border-0">
-											<i class="devicon-wordpress-plain colored"></i>Elementor</li>
+											<i class="fab fa-elementor"></i>&nbspElementor</li>
 									</ul>
 								</div>
 							</div>
