add content of the section 'À propos'

--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
 					<div class="text text-center">
 						<!-- <span class="subheading">Bonjour! Je suis</span> -->
 						<h1>Alper AKBULUT</h1>
-						<h2>Je suis un
+						<h2>Je suis
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='[ "développeur web junior", "coureur d&#39orientation", "challenger", "passionné du code" ]'></span>
-							<!-- &#39 -->
+								data-rotate='[ "un développeur web full-stack", "passionné de la course d&#39orientation", "un challenger du code" ]'></span>
 						</h2>
 					</div>
 				</div>
@@ -92,8 +91,15 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">À propos</h1>
 							<h2 class="mb-4">À propos</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p class="text-justify">
+								Diplômé du cursus de développeur web full-stack Passerelle Numérique de l’École Centrale
+								de Marseille, je suis actuellement en formation de Symfony/React au sein de 3W Academy
+								pour 3 mois. <br>
+								Ayant 9 ans d'éxpérience professionnelle dans la police et le bâtiment je me
+								suis orienté vers le numérique qui m'a toujours fasciné. <br>
+								Ma motivation, ma curiosité, ma polyvalance et ma forte capacité d'adaptabilité sont
+								mes qualités qui m'accompagneront dans ma nouvelle carière.
+							</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Nom:</span> <span>Alper Akbulut</span></li>
 								<li class="d-flex"><span>Age:</span> <span>33</span></li>
@@ -102,10 +108,11 @@
 								<li class="d-flex"><span>Téléphone: </span> <span>06 65 03 64 13</span></li>
 								<!-- les liens de Linkedin et github seront mis dans les icones -->
 								<li class="d-flex"><span>LinkedIn:</span> <span> <a
-											href="https://linkedin.com/in/alper-akbulut">linkedin.com/in/alper-akbulut</a></span>
+											href="https://www.linkedin.com/in/alper-akbulut/"
+											target="_blank">linkedin.com/in/alper-akbulut</a></span>
 								</li>
-								<li class="d-flex"><span>GitHub:</span> <span> <a
-											href="https://github.com/alpernuage">github.com/alpernuage</a></span>
+								<li class="d-flex"><span>GitHub:</span> <span> <a href="https://github.com/alpernuage"
+											target="_blank">github.com/alpernuage</a></span>
 								</li>
 							</ul>
 							<p><a href="https://docs.google.com/document/d/1X-OQ9s3XH4AA_mCRmEErrk-j3jNWhlThSSt0bGbVdLU/export?format=pdf"
