finalisation of HTML-CSS-Botstrap projects

--- a/index.html
+++ b/index.html
@@ -391,57 +391,63 @@
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 				</div>
 			</div>
+			<!-- PROJECTS SECTION -->
 			<div class="card-deck">
+				<!-- HTML-CSS E-commerce O2 -->
 				<div class="card shadow">
-					<a href="./projet1-html-css.html" target="_blank">
-						<img class="card-img-top" src="images/site-e-commerce-HTML-CSS.jpg" alt="image of web site O2">
-						<div class="card-body">
-							<h5 class="card-title">O<sub>2</sub></h5>
-							<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
-							<span class="badge badge-info">HTML</span>
-							<span class="badge badge-info">CSS</span>
-							<p class="card-text text-secondary">Réalisation
-								d'un site e-commerce responsive en HTML-CSS</p>
-							<!-- <p class="card-text text-secondary text-primary">Voir plus</p> -->
-						</div>
-						<div class="card-footer">
-							<small class="text-primary">Voir plus</small>
-						</div>
-					</a>
+					<a href="./projects/HTML_CSS_e_commerce/index.html" class="stretched-link" target="_blank"> </a>
+					<img class="card-img-top" src="./projects/HTML_CSS_e_commerce/o2.jpg" alt="image of web site O2">
+					<div class="card-body">
+						<h5 class="card-title">O<sub>2</sub></h5>
+						<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
+						<span class="badge badge-info">HTML</span>
+						<span class="badge badge-info">CSS</span>
+						<p class="card-text text-secondary">Réalisation
+							d'un site e-commerce responsive en HTML-CSS</p>
+						<!-- <p class="card-text text-secondary text-primary">Voir plus</p> -->
+					</div>
+					<div class="card-footer">
+						<small class="text-primary">Voir plus</small>
+					</div>
 				</div>
+
+				<!-- Bootstrap E-commerce O2 -->
 				<div class="card shadow">
-					<a href="https://alpernuage.github.io/Bootstrap-first-project-web-site/" target="_blank">
-						<img class="card-img-top" src="images/bootstrap-site-e-commerce.jpg"
-							alt="image of web site Bootstrap E-commerce">
-						<div class="card-body">
-							<h5 class="card-title">E-commerce</h5>
-							<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
-							<span class="badge badge-info">Bootstrap</span>
-							<p class="card-text text-secondary">Réalisation
-								d'un site e-commerce avec Bootstrap.</p>
-							<!-- <p class="card-text text-primary">Voir plus</p> -->
-						</div>
-						<div class="card-footer">
-							<small class="text-primary">Voir plus</small>
-						</div>
-					</a>
+					<a href="./projects/Bootstrap_blog_d'articles/index.html" class="stretched-link"
+						target="_blank"></a>
+					<img class="card-img-top" src="./projects/Bootstrap_blog_d'articles/1.jpg" alt="image of site">
+					<div class="card-body">
+						<h5 class="card-title">Blog d'articles</h5>
+						<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
+						<span class="badge badge-info">Bootstrap</span>
+						<span class="badge badge-info">Bootstrap</span>
+						<p class="card-text text-secondary">Réalisation
+							d'un blog d'articles avec Bootstrap</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-primary">Voir plus</small>
+					</div>
+
 				</div>
+
+				<!-- INCEPTION -->
 				<div class="card shadow">
-					<a href="https://alpernuage.github.io/INCEPTION-Film-Poster/" target="_blank">
-						<img class="card-img-top" src="images/inception-1.jpg" alt="INCEPTION film poster image">
-						<div class="card-body">
-							<h5 class="card-title">INCEPTION</h5>
-							<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
-							<span class="badge badge-info">HTML</span>
-							<span class="badge badge-info">CSS</span>
-							<p class="card-text text-secondary paragrahpeOneLine">Réalisation film poster.</p>
-						</div>
-						<div class="card-footer">
-							<small class="card-text text-primary">Voir plus</small>
-							<!-- <p class="card-text text-primary">Voir plus</p> -->
-						</div>
-					</a>
+					<a href="./projects/HTML_CSS_INCEPTION/index.html" class="stretched-link" target="_blank"></a>
+					<img class="card-img-top" src="./projects/HTML_CSS_INCEPTION/0.jpg" alt="image of site">
+					<div class="card-body">
+						<h5 class="card-title">INCEPTION</h5>
+						<h6 class="card-subtitle mb-2 text-muted">Web Design</h6>
+						<span class="badge badge-info">HTML</span>
+						<span class="badge badge-info">CSS</span>
+						<p class="card-text text-secondary">Reproduire une affiche de film en HTML-CSS</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-primary">Voir plus</small>
+					</div>
+
 				</div>
+
+
 			</div>
 		</div>
 		</div>
