--- a/projects/HTML_CSS_e_commerce/index.html
+++ b/projects/HTML_CSS_e_commerce/index.html
@@ -8,23 +8,23 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="../../css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="../../css/animate.css">
 
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="../../css/owl.carousel.min.css">
+	<link rel="stylesheet" href="../../css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="../../css/magnific-popup.css">
 
-	<link rel="stylesheet" href="css/aos.css">
+	<link rel="stylesheet" href="../../css/aos.css">
 
-	<link rel="stylesheet" href="css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/ionicons.min.css">
 
-	<link rel="stylesheet" href="css/flaticon.css">
+	<link rel="stylesheet" href="../../css/flaticon.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
 		integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../../css/icomoon.css">
+	<link rel="stylesheet" href="../../css/style.css">
 	<link rel="stylesheet"
 		href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
@@ -51,11 +51,12 @@
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav nav ml-auto">
-					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Accueil</span></a></li>
-					<li class="nav-item"><a href="#about-section" class="nav-link"><span>À propos</span></a></li>
-					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Résumé</span></a></li>
-					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projets</span></a></li>
-					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+					<li class="nav-item"><a href="../../#home-section" class="nav-link"><span>Accueil</span></a></li>
+					<li class="nav-item"><a href="../../#about-section" class="nav-link"><span>À propos</span></a></li>
+					<li class="nav-item"><a href="../../#resume-section" class="nav-link"><span>Résumé</span></a></li>
+					<li class="nav-item"><a href="../../#projects-section" class="nav-link"><span>Projets</span></a>
+					</li>
+					<li class="nav-item"><a href="../../#contact-section" class="nav-link"><span>Contact</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -67,8 +68,7 @@
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center">
 						<h1><br>
-							Alper AKBULUT
-							<br>
+							Site web e-commerce
 							O<sub>2</sub></h1>
 						<h2 class="d-inline">Le Projet :
 						</h2>
@@ -86,12 +86,13 @@
 						<span class="badge badge-info">HTML</span>
 						<span class="badge badge-info">CSS</span>
 						<span class="badge badge-info">Figma</span>
+						<span class="badge badge-success">Responsive</span>
 
 						<!-- BUTTONS -->
-						<div class="d-flex justify-content-around pt-4">
+						<div class="d-flex justify-content-around">
 							<a href="https://alpernuage.github.io/First-web-site-e-commerce-responsive/"> <button
 									type="button" class="btn btn-outline-primary">Voir le site</button></a>
-							<a href="index.html"> <button type="button"
+							<a href="../../index.html"> <button type="button"
 									class="btn btn-outline-secondary">Retour</button></a>
 						</div>
 					</div>
@@ -137,34 +138,31 @@
 			</div>
 			<div class="col-6">
 				<div class="mb-4 shadow bg-white rounded">
-					<a data-fancybox="gallery" href="images/projet-html-css-big.jpg"><img class="img-fluid"
-							src="images/projet-html-css-big.jpg"></a>
+					<a data-fancybox="gallery" href="./1.jpg"><img class="img-fluid" src="./1.jpg"></a>
 				</div>
 				<div class="my-4 shadow bg-white rounded">
-					<a data-fancybox="gallery" href="images/projet-html-css-body.jpg"><img class="img-fluid"
-							src="images/projet-html-css-body.jpg"></a>
+					<a data-fancybox="gallery" href="./2.jpg"><img class="img-fluid" src="./2.jpg"></a>
 				</div>
 				<div class="my-4 shadow bg-white rounded">
-					<a data-fancybox="gallery" href="images/projet-html-css-products.jpg"><img class="img-fluid"
-							src="images/projet-html-css-products.jpg"></a>
+					<a data-fancybox="gallery" href="./3.jpg"><img class="img-fluid" src="./3.jpg"></a>
 				</div>
 			</div>
 		</div>
 
 
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery-migrate-3.0.1.min.js"></script>
-		<script src="js/popper.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/jquery.easing.1.3.js"></script>
-		<script src="js/jquery.waypoints.min.js"></script>
-		<script src="js/jquery.stellar.min.js"></script>
-		<script src="js/owl.carousel.min.js"></script>
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<script src="js/aos.js"></script>
-		<script src="js/jquery.animateNumber.min.js"></script>
-		<script src="js/scrollax.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="../../js/jquery.min.js"></script>
+		<script src="../../js/jquery-migrate-3.0.1.min.js"></script>
+		<script src="../../js/popper.min.js"></script>
+		<script src="../../js/bootstrap.min.js"></script>
+		<script src="../../js/jquery.easing.1.3.js"></script>
+		<script src="../../js/jquery.waypoints.min.js"></script>
+		<script src="../../js/jquery.stellar.min.js"></script>
+		<script src="../../js/owl.carousel.min.js"></script>
+		<script src="../../js/jquery.magnific-popup.min.js"></script>
+		<script src="../../js/aos.js"></script>
+		<script src="../../js/jquery.animateNumber.min.js"></script>
+		<script src="../../js/scrollax.min.js"></script>
+		<script src="../../js/main.js"></script>
 </body>
 
 </html>
